--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
     "@ionic/pro": "2.0.4",
+    "angular-oauth2": "^4.2.0",
+    "angular-oauth2-oidc": "^5.0.2",
     "cordova-plugin-advanced-http": "2.0.4",
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-nativestorage": "2.3.2",
